<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="settings">Settings</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="btn_spotify">Spotify Streamer</string>
    <string name="btn_scores">Scores App</string>
    <string name="btn_library">Library App</string>
    <string name="btn_bigger">Build it Bigger</string>
    <string name="btn_bacon">Bacon Reader</string>
    <string name="btn_capstone">Capstone: My Own App</string>

    <string name="toast">This button will launch my \'%s\' app</string>

</resources>
