<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/nano_background"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary" />

    <TextView
        android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nano_navy"
        android:textSize="@dimen/titles"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/btn_spotify"
            android:text="@string/btn_movies"
            android:onClick="btn_click"
            style="@style/ButtonStyle_Orange" />

        <Button
            android:id="@+id/btn_scores"
            android:text="@string/btn_scores"
            android:onClick="btn_click"
            style="@style/ButtonStyle_Orange" />

        <Button
            android:id="@+id/btn_library"
            android:text="@string/btn_library"
            android:onClick="btn_click"
            style="@style/ButtonStyle_Orange" />

        <Button
            android:id="@+id/btn_bigger"
            android:text="@string/btn_bigger"
            android:onClick="btn_click"
            style="@style/ButtonStyle_Orange" />

        <Button
            android:id="@+id/btn_bacon"
            android:text="@string/btn_bacon"
            android:onClick="btn_click"
            style="@style/ButtonStyle_Orange" />

        <Button
            android:id="@+id/btn_capstone"
            android:text="@string/btn_capstone"
            android:onClick="btn_click"
            style="@style/ButtonStyle_Red" />

    </LinearLayout>

</LinearLayout>
